feat: implement passwordViewModel and integrate it

--- a/Main/Assets/Localizable.xcstrings
+++ b/Main/Assets/Localizable.xcstrings
@@ -133,6 +133,17 @@
         }
       }
     },
+    "PasswordPageInvalidInput" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Senha ou CPF inválidos!"
+          }
+        }
+      }
+    },
     "PasswordPageTitle" : {
       "extractionState" : "manual",
       "localizations" : {
