feat: integrate authenticate uc in view

--- a/Main/Assets/Localizable.xcstrings
+++ b/Main/Assets/Localizable.xcstrings
@@ -122,6 +122,17 @@
         }
       }
     },
+    "PasswordPageError" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Desculpe, ocorreu um erro..."
+          }
+        }
+      }
+    },
     "PasswordPageForgotPassword" : {
       "extractionState" : "manual",
       "localizations" : {
