feat: listen user auth changes in app coordinator

--- a/Main/Resources/Localizable.xcstrings
+++ b/Main/Resources/Localizable.xcstrings
@@ -1,6 +1,61 @@
 {
   "sourceLanguage" : "pt-BR",
   "strings" : {
+    "BankStatementFilterTabFour" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Futuro"
+          }
+        }
+      }
+    },
+    "BankStatementFilterTabOne" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tudo"
+          }
+        }
+      }
+    },
+    "BankStatementFilterTabThree" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Saída"
+          }
+        }
+      }
+    },
+    "BankStatementFilterTabTwo" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Entrada"
+          }
+        }
+      }
+    },
+    "BankStatementTitle" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Extrato"
+          }
+        }
+      }
+    },
     "IdentificationPageCpf" : {
       "extractionState" : "manual",
       "localizations" : {
